# isgcr

./: CMakeLists.txt  ClassificationDataset.cpp  ClassificationDataset.h  Classifier.cpp  Classifier.h  ConsolePluginProgress.cpp  ConsolePluginProgress.h  FannClassificationDataset.cpp  FannClassificationDataset.h  LibSVMClassificationDataset.cpp  LibSVMClassificationDataset.h  Logger.cpp  Logger.h  LoggerPluginProgress.cpp  LoggerPluginProgress.h  NeuralNetworkPixelClassifiers.cpp  NeuralNetworkPixelClassifiers.h  ParseUtils.cpp  ParseUtils.h  README.md  SVMPixelClassifier.cpp  SVMPixelClassifier.h  boost_program_options_types.cpp  boost_program_options_types.h  classification.cpp  classification.h  cli_parser.cpp  cli_parser.h  common.h  haralick.cpp  haralick.h  haralick_image.cpp  haralick_image.h  image_loader.cpp  image_loader.h  learning_classes.cpp  learning_classes.h  learning_classes_loader.cpp  learning_classes_loader.h  main.cpp  (+1 more)
cmake/Modules/: FindValgrind.cmake
